[package]
name = "t2_bus"
version = "0.1.0"
authors = ["Felix Watts <felixwatts@gmail.com>"]
edition = "2018"
keywords = ["message bus", "pubsub", "pub sub", "interprocess", "request response", "microservice", "bus"]
license = "MIT"
description = "An inter- or intra-process message bus supporting publish/subscribe and request/response."
repository = "https://github.com/felixwatts/t2_bus"
readme = "README.md"
categories = ["asynchronous", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
byteorder = "1.4.2"
log="0.4.14"
regex = "1.4.3"
lazy_static = "1.4.0"
futures-util="0.3.5"
tokio = { version = "1.2.0", features = ["full", "rt"] } # TODO reduce features
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.2"
serde_derive = "1.0.123"
tokio-util = { version = "0.6.3", features = ["codec"] }
bytes = "1.0.1"
futures-sink = "0.3.13"
futures-core="0.3.13"
futures="0.3.13"
ansi_term = "0.12.1"
flate2 = "1.0.20"
thiserror = "1.0.24"
tokio-rustls = { version = "0.26.0", optional = false }
rustls-pemfile = "2.1.2"
clap = { version = "4.5.9", features = ["derive"] }
websocket = "0.27.1"
webpki-roots = "0.26.3"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
tempfile = "3.2.0"

# [features]
# tls = [ 
#     "tokio-rustls"
# ]