[package]
name = "t2_bus"
version = "0.1.0"
authors = ["Felix Watts <felixwatts@gmail.com>"]
edition = "2018"
keywords = ["message", "bus", "pubsub", "reqrsp", "microservice"]
license = "MIT"
description = "An inter- or intra-process message bus supporting publish/subscribe and request/response."
repository = "https://github.com/felixwatts/t2_bus"
readme = "README.md"
categories = ["asynchronous", "concurrency", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.140"
byteorder = "1.4.2"
regex = "1.11.1"
lazy_static = "1.4.0"
tokio = { version = "1.46.0", features = ["full", "rt", "net"] } # TODO reduce features
serde = { version = "1.0.219", features = ["derive"] }
ciborium = "0.2.2"
serde_derive = "1.0.123"
tokio-util = { version = "0.7.15", features = ["codec"] }
bytes = "1.10.1"
futures="0.3.31"
flate2 = "1.1.2"
thiserror = "2.0.12"
tokio-rustls = { version = "0.26.2", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
clap = { version = "4.5.40", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }

[features]
tls = [ 
    "tokio-rustls",
    "rustls-pemfile"
]